Trigger/git_webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eventlistener.chennaidev-26.tatacommunications.com
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: el-tekton-events-listener
            port:
              number: 8080
